[package]
name = "compressbench"
version = "0.1.0"
authors = ["Andre Bogus <bogusandre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.0"
deflate = "0.8.6"
lz4-compression = "0.7.0"
lz4_flex = "0.3.6"
lzzzz = "0.7.2"
lz4-compress = "0.1.1"
lz-fear = "0.1.1"
lzma-rs = "0.1.3"
rar = "0.2.0"
rust-lzma = "0.5.1"
snap = "1.0.1"
snappy_framed = "0.1.0"
tar = "0.4.30"
yazi = "0.1.3"
zip = "0.5.8"
zopfli = "0.4.0"
zstd = "0.5.3"
flate2 = "1.0.14"
num-format = "0.4.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
